# da-agent-project

./: .dockerignore  .env.example.demo  .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_ANALYSIS.md  JD.txt  README.md  curl_command.txt  docker-compose.yml  export_graph.py  implementation_todo.md  models.txt  project_for_cv.md  pyproject.toml  research.md  results.txt  streamlit_app.py
.cursor/: .cursorrules
app/: __init__.py  config.py  debug.py  logger.py  main.py
backend/: http_client.py  main.py  utils.py
deploy/: modal_app.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: AGENTS.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  ENV.md  README.md  RUNBOOK.md  dataset_research_2026-03-29.md  metric_definitions.md  notebooklm_mcp_codex_setup_2026-03-29.md  retention_rules.md  revenue_caveats.md  thangquang09_doc.md
evals/: build_cases.py  build_spider_cases.py  case_contracts.py  generate_movielens_cases.py  groundedness.py  manual_sql_smoke.py  manual_sql_smoke_report.json  manual_sql_smoke_report.md  runner.py
frontend/: .gitignore  CLAUDE.md  Dockerfile  package-lock.json  package.json
mcp_server/: __init__.py  config.py  schemas.py  server.py  tools.py
plan/: full_postgres_migration.md
scripts/: sync_claude_agents.py
tests/: conftest.py  test_artifact_system.py  test_backend_api.py  test_conversation_store_pg.py  test_debug_logging.py  test_eval_case_contracts.py  test_eval_runner_logic.py  test_graph_flow.py  test_groundedness.py  test_llm_client.py  test_memory.py  test_observability.py  test_plan_execute.py  test_prompt_manager.py  (+16 more)
(+216 files in other folders)
