[project]
name = "da-agent-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.1.3",
    "langfuse>=3.9.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
    "streamlit>=1.55.0",
    "mcp>=1.12.4",
    "uvicorn>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --disable-warnings"
