[project]
name = "da-agent-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.1.3",
    "langfuse>=3.9.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
    "streamlit>=1.55.0",
    "mcp>=1.12.4",
    "uvicorn>=0.29.0",
    "e2b-code-interpreter>=1.0.0",
    "Pillow>=10.0.0",
    "nltk>=3.9.4",
    "sqlparse>=0.5.5",
    "tqdm>=4.67.3",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "torchvision>=0.26.0",
    "fastapi>=0.115.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "sqlglot>=26.0.0",
    "greenlet>=3.3.2",
    "playwright>=1.58.0",
    "psycopg>=3.3.3",
    "psycopg-binary==3.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --disable-warnings"
